--- a/phenology-frontend/src/app/page/history/history.component.html
+++ b/phenology-frontend/src/app/page/history/history.component.html
@@ -1,23 +1,23 @@
 <div class="mt-5">
   <div class="container">
-    <div class="fixed-bg">
-      <h1 class="p-3 bg-success text-light rounded shadow-lg" style="--bs-bg-opacity: .5;">A növényfenológia jelentősége</h1>
+    <div class="fixed-bg importance-bg row justify-content-end">
+      <div class="col-5 dark-background py-1">
+        <h2 class="p-3 text-light text-center fw-bold">
+          A növényfenológia jelentősége
+        </h2>
+        <h5 class="p-3 text-light text-justify">
+          Az éghajlat a meteorológiai elemek sokaságának statisztikai elemzése
+          révén írható le, viszont a növények életciklusának alakulása, valamint
+          a növényi produkció összegzi a környezeti hatásokat, az időjárási
+          elemek összhatását mutatja. Így a növény kiváló meteorológiai eszköz
+          az éghajlat, az éghajlat változásának jellemzésére.
+        </h5>
+      </div>
     </div>
-    <p class="mt-3">
-      Az éghajlat a meteorológiai elemek sokaságának statisztikai elemzése révén
-      írható le, viszont a növények életciklusának alakulása, valamint a növényi
-      produkció összegzi a környezeti hatásokat, az időjárási elemek összhatását
-      mutatja. Így a növény kiváló meteorológiai eszköz az éghajlat, az éghajlat
-      változásának jellemzésére.
-    </p>
 
-    <br />
+    <h3 class="py-5 text-center"><b>fenológia = megjelenéstan </b></h3>
 
-    <p><b>fenológia = megjelenéstan </b></p>
-
-    <br />
-
-    <p>
+    <p class="py-3 text-justify">
       A (fito)fenológia a növények környezeti viszonyoktól függő, szabályszerű
       egymásutánban bekövetkező jelenségeinek vizsgálatával foglalkozó tudomány.
       A fenológiai jelenségek a növény fejlődésének látható jelei, a fenológiai
@@ -27,9 +27,7 @@
       feljegyzése volt.
     </p>
 
-    <br />
-
-    <p>
+    <p class="py-3 text-justify">
       Az évtizedek során többször változott a növényfenológiai megfigyelések
       célja. A XX. század közepéig a természettudományos érdeklődés és az
       ismeretszerzés, a XX. század közepétől a mezőgazdasági termesztés
@@ -38,9 +36,7 @@
       a fő cél.
     </p>
 
-    <br />
-
-    <p>
+    <p class="py-3 text-justify">
       A hőmérséklet emelkedésével az éghajlati övek eltolódnak, a mérsékelt
       szélességeken a vegetációs időszak hosszabbodik, a kártevők és kórokozók
       elterjedési területe is megváltozik. A növények komplex módon reagálnak az
@@ -48,9 +44,7 @@
       klíma változását.
     </p>
 
-    <br />
-
-    <p>
+    <p class="py-3 text-justify">
       Genfben a XIX. század eleje óta folyamatosan végeznek észleléseket a
       gesztenye lombosodásának kezdeti időpontjára vonatkozóan. Aono és Kazui
       2008-ban megjelent tudományos cikkükben a Japánban tradicionálisan
@@ -64,12 +58,14 @@
       elemezték a területre jellemző éghajlatingadozásokat.
     </p>
 
-    <div class="container my-5 border shadow">
-      <img
-        src="../../../assets/image/5-Figure2-1.png"
-        class="illustration img-fluid my-5"
-        alt=""
-      />
+    <div class="container my-5 border shadow justify-content-center mb-5">
+      <div class="d-flex justify-content-center">
+        <img
+          src="../../../assets/image/5-Figure2-1.png"
+          class="illustration my-5"
+          alt=""
+        />
+      </div>
 
       <label for="illustration" class="d-block text-center mb-3 fst-italic"
         >A japáncseresznye virágzási időpontja Kiotóban 801. és 2005. között az
@@ -81,27 +77,34 @@
 </div>
 
 <div class="container">
-  <h1 class="p-3 bg-success text-light rounded shadow-lg">A növényfenológia története</h1>
+  <div class="fixed-bg history-bg row justify-content-start my-5">
+    <div class="col-5 dark-background py-5">
+      <h2 class="p-3 text-light text-center fw-bold">
+        A növényfenológia rövid története
+      </h2>
+      <h5 class="p-3 text-light text-justify">
+        A természethez a mainál sokkal közelebb élő és attól sokkal jobban függő
+        ember mindig is figyelte az időjárás és a természet folyamatait, a
+        növények évenkénti fejlődését, az állatok viselkedését. Számos népi
+        időjárási megfigyelésünk kapcsolódik növényekhez és állatokhoz.
+      </h5>
+    </div>
+  </div>
 
-  <p class="mt-3">
-    A természethez a mainál sokkal közelebb élő és attól sokkal jobban függő
-    ember mindig is figyelte az időjárás és a természet folyamatait, a növények
-    évenkénti fejlődését, az állatok viselkedését. Számos népi időjárási
-    megfigyelésünk kapcsolódik növényekhez és állatokhoz. Február 19-én például
-    a pacsirta megszólalását várták, mert az korai tavaszt ígért. Március 19-én,
-    József napon a fecskéket megérkezését várták és ekkor engedték ki a méheket
-    is először. Úgy tartották, hogy ha a fecskék még Szent Mihály napján,
-    szeptember 29-én sem mentek el, akkor hosszú ősz várható. Egyes napok
-    időjárásából pedig a várható termésre következtettek: Gyertyaszentelő
-    Boldogasszony napján, február 2-án például a Bács megyei Topolyán azt
-    tartották, hogy amilyen hosszú jégcsapok lógnak az ereszről, olyan hosszú
-    kukoricacsövek teremnek majd. Mátyás napján, február 24-én a hideg idő jó
-    termést ígért, az eső pedig jégverést és savanyú szőlőt jelentett.
+  <p class="py-3 text-justify">
+    Február 19-én például a pacsirta megszólalását várták, mert az korai tavaszt
+    ígért. Március 19-én, József napon a fecskéket megérkezését várták és ekkor
+    engedték ki a méheket is először. Úgy tartották, hogy ha a fecskék még Szent
+    Mihály napján, szeptember 29-én sem mentek el, akkor hosszú ősz várható.
+    Egyes napok időjárásából pedig a várható termésre következtettek:
+    Gyertyaszentelő Boldogasszony napján, február 2-án például a Bács megyei
+    Topolyán azt tartották, hogy amilyen hosszú jégcsapok lógnak az ereszről,
+    olyan hosszú kukoricacsövek teremnek majd. Mátyás napján, február 24-én a
+    hideg idő jó termést ígért, az eső pedig jégverést és savanyú szőlőt
+    jelentett.
   </p>
 
-  <br />
-
-  <p>
+  <p class="py-3 text-justify">
     Carl Linné (1707-1778) az alapvető botanikai rendszerező munkája mellett
     évenként adatokat gyűjtött a vadmadarak költözésének és visszatérésének
     időpontjáról. Följegyezte, hogy mikor áll be a tavaszi olvadás, melyek az
@@ -109,14 +112,18 @@
     megfigyeléseivel Linné megalapította a fenológia tudományát.
   </p>
 
-  <br />
+  <p class="py-3 text-justify">
+    Hazánkban már Kitaibel Pál (1757-1817) botanikai és terepmunkája során
+    följegyezte a fajok virítási idejét, időtartamát, melyből az élőhelyek
+    eltérő éghajlati adottságaira következtetett.
+  </p>
 
-  <p>
+  <p class="py-3 text-justify">
     Charles Morren (1807-1858), a Liege-i Egyetem botanika professzora használta
     először tudományos cikkben a „fenológia” kifejezést.
   </p>
-  <br />
-  <p>
+
+  <p class="py-3 text-justify">
     Mivel az időjárás és a növények fejlődése közötti szoros kapcsolat
     nyilvánvaló volt, a XIX. század második felében megalakuló nemzeti
     meteorológiai szolgálatok mérési programjában szerepelt a növények
@@ -132,13 +139,15 @@
     alkalmazása szükséges, mely alapján a „tavasz kezdete”, „nyár kezdete”, „ősz
     kezdete” és „tél kezdete” állapotok jelennek meg.
   </p>
-  <div class="container my-5 border shadow">
-    <img
-      src="../../../assets/image/FAPAR_erdo.png"
-      class="illustration img-fluid my-5"
-      alt=""
-    />
 
+  <div class="container my-5 border shadow">
+    <div class="d-flex justify-content-center">
+      <img
+        src="../../../assets/image/FAPAR_erdo.png"
+        class="illustration my-5"
+        alt=""
+      />
+    </div>
     <label for="illustration" class="d-block text-center mb-3 fst-italic"
       >A FAPAR műholdas vegetációs index éves menete hazánkban 1999. és 2018.
       között lombhullató erdőkre. A kitavaszodás, vagyis amikor megugrik az
@@ -153,23 +162,25 @@
       <a
         href="https://www.met.hu/ismeret-tar/erdekessegek_tanulmanyok/index.php?id=2420&hir=A_novenyzet_muholdas_megfigyelese_%E2%80%93_vegetacios_indexek"
         target="_blank"
-        >Részletes tanulmány>></a
+        >Műholdas vegetációs indexekről szóló részletes tanulmány az OMSZ honlapján>></a
       >
     </label>
   </div>
 
-  <br />
-  <p>
+  <p class="py-3 text-justify">
     A kutatások szerint Európában a tavaszi-nyári fenológiai fázisok időpontjai
     10 évenként mintegy 2,5 nappal korábbra kerülnek, míg az őszi elszíneződés,
     levélhullás időpontjaiban nincs számottevő trend.
   </p>
+
   <div class="container my-5 border shadow">
-    <img
-      src="../../../assets/image/FAPAR_tavasz_erdo.png"
-      class="illustration img-fluid my-5"
-      alt=""
-    />
+    <div class="d-flex justify-content-center">
+      <img
+        src="../../../assets/image/FAPAR_tavasz_erdo.png"
+        class="illustration my-5"
+        alt=""
+      />
+    </div>
 
     <label for="illustration" class="d-block text-center mb-3 fst-italic"
       >A FAPAR index változása hazánkban a tavaszi hónapokban lombhullató
@@ -180,54 +191,57 @@
       <a
         href="https://www.met.hu/ismeret-tar/erdekessegek_tanulmanyok/index.php?id=2420&hir=A_novenyzet_muholdas_megfigyelese_%E2%80%93_vegetacios_indexek"
         target="_blank"
-        >Részletes tanulmány>></a
+        >Műholdas vegetációs indexekről szóló részletes tanulmány az OMSZ honlapján>></a
       >
     </label>
   </div>
 </div>
 
 <div class="container">
-  <h1 class="p-3 bg-success text-light rounded shadow-lg">Növényfenológia az Országos Meteorológiai Szolgálatnál</h1>
+  <div class="fixed-bg omsz-bg row justify-content-end my-5">
+    <div class="col-5 dark-background py-5">
+      <h2 class="p-3 text-light text-center fw-bold">
+        Növényfenológiai megfigyelések az Országos Meteorológiai Szolgálatnál
+      </h2>
+      <h5 class="p-3 text-light text-justify">
+        1870-ben, az Országos Meteorológiai Szolgálat jogelődjének, a
+        Meteorológiai és Földdelejességi Magyar Királyi Központi Intézet
+        alapításakor létesült a növényfenológiai megfigyelő hálózat.
+      </h5>
+    </div>
+  </div>
 
-  <p class="mt-3">
-    Hazánkban már Kitaibel Pál (1757-1817) botanikai és terepmunkája során
-    följegyezte a fajok virítási idejét, időtartamát, melyből az élőhelyek
-    eltérő éghajlati adottságaira következtetett.
-  </p>
-
-  <br />
-
-  <p>
-    <img
-      src="../../../assets/image/intezet_cimer.gif"
-      class="img-fluid float-start me-5 mb-5"
-      alt=""
-    />
-    1870-ben, az Országos Meteorológiai Szolgálat jogelődjének, a Meteorológiai
-    és Földdelejességi Magyar Királyi Központi Intézet alapításakor létesült a
-    növényfenológiai megfigyelő hálózat. Az akkori évkönyvekben 1871-1885.
-    között 57 helyről vannak megfigyelések, hosszabb (legalább 7 éves) adatsor
-    Bakonybél, Eger, Gospic, Körmend, Kőszeg, Nagy-Szeben, Oravica, Pécs és
-    Török-Becse településeken állt elő. Ezt követően 1910-ben a Magyar Földrajzi
-    Társaság, majd 1934-ben az Erdészeti Kutató Intézet létesített megfigyelő
-    hálózatot.
-  </p>
+  <div class="container my-5" style="height: 200px">
+    <p class="py-3 text-justify">
+      <img
+        src="../../../assets/image/intezet_cimer.gif"
+        class="img-fluid float-start me-5 mb-5"
+        alt=""
+      />
+      A korabeli évkönyvekben 1871-1885. között 57 helyről vannak megfigyelések,
+      hosszabb (legalább 7 éves) adatsor Bakonybél, Eger, Gospic, Körmend,
+      Kőszeg, Nagy-Szeben, Oravica, Pécs és Török-Becse településeken állt elő.
+      Ezt követően 1910-ben a Magyar Földrajzi Társaság, majd 1934-ben az
+      Erdészeti Kutató Intézet létesített megfigyelő hálózatot.
+    </p>
+  </div>
 
   <div class="container my-5 border shadow">
-    <img
-      src="../../../assets/image/evkonyv_1871.png"
-      class="illustration img-fluid my-5"
-      alt=""
-    />
+    <div class="d-flex justify-content-center">
+      <img
+        src="../../../assets/image/evkonyv_1871.png"
+        class="illustration my-5"
+        alt=""
+        style="max-width: 100%"
+      />
+    </div>
     <label for="illustration" class="d-block text-center mb-3 fst-italic">
       Részlet a Meteorológiai és Földdelejességi Magyar Királyi Központi Intézet
-      1871-es évkönyvének fonológiai adataiból.
+      1871-es évkönyvének fenológiai adataiból.
     </label>
   </div>
 
-  <br />
-
-  <p>
+  <p class="py-3 text-justify">
     1951-ben az immár Országos Meteorológiai Intézet néven futó Meteorológiai
     Szolgálat szervezett fenológiai megfigyelő hálózatot. Túlnyomórészt vadon
     termő növények megfigyelését végezték mintegy 200 helyen, míg a
@@ -239,11 +253,15 @@
   </p>
 
   <div class="container my-5 border shadow">
-    <img
-      src="../../../assets/image/archiv_megfigyeles.jpg"
-      class="illustration img-fluid my-5"
-      alt=""
-    />
+    <div class="d-flex justify-content-center">
+      <img
+        src="../../../assets/image/archiv_megfigyeles.jpg"
+        class="illustration my-5"
+        alt=""
+        style="max-width: 100%"
+      />
+    </div>
+
     <label for="illustration" class="d-block text-center mb-3 fst-italic">
       Részlet az Országos Meteorológiai Intézet 1963-es fonológiai adataiból.
     </label>
