--- a/phenology-frontend/src/app/page/guide/detailed-plant-guide/detailed-plant-guide.component.scss
+++ b/phenology-frontend/src/app/page/guide/detailed-plant-guide/detailed-plant-guide.component.scss
@@ -1,3 +1,50 @@
+h1 {
+  font-size: 6vw;
+}
+
+h2 {
+  font-size: 4vw;
+}
+
+/*
+h3 {
+  font-size: 3vw;
+}
+
+h5 {
+  font-size: 2vw;
+}
+*/
+
+.fixed-bg {
+  background-image: url("../../../../assets/image/aubreys-phenology-wheel-southern-hemisphere.jpg");
+  min-height: 500px;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.dark-background{
+  background-color: rgba($color: #252525, $alpha: 0.5);
+  //opacity: 0.5;
+}
+
+.vertical-center{
+  display: flex;
+  align-items: center;
+}
+
+.card-text, .card-footer{
+  text-align: justify;
+}
+
+.card-background{
+  background-color: beige;
+}
+
+
+
 .hovered:hover {
   //box-shadow: 10px 10px 5px grey;
   border-color:rgb(1, 160, 1);
