--- a/phenology-frontend/src/app/page/home/home.component.html
+++ b/phenology-frontend/src/app/page/home/home.component.html
@@ -102,7 +102,7 @@
           class="card-img-top"
           alt="..."
         />
-        <p class="text-center align-middle mt-1 p-0">Időjárás</p>
+        <p class="text-center align-middle mt-3">Időjárás</p>
       </a>
     </div>
 
@@ -124,7 +124,7 @@
           class="card-img-top"
           alt="..."
         />
-        <p class="text-center align-middle mt-1 p-0">Éghajlat</p>
+        <p class="text-center align-middle mt-3 p-0">Éghajlat</p>
       </a>
     </div>
 
@@ -135,7 +135,7 @@
           class="card-img-top"
           alt="..."
         />
-        <p class="text-center align-middle mt-1 p-0">Előrejelzés</p>
+        <p class="text-center align-middle mt-3 p-0">Előrejelzés</p>
       </a>
     </div>
 
@@ -168,7 +168,7 @@
           class="card-img-top"
           alt="..."
         />
-        <p class="text-center align-middle mt-1 p-0">Meteora</p>
+        <p class="text-center align-middle mt-3 p-0">Meteora</p>
       </a>
     </div>
 
@@ -179,7 +179,7 @@
           class="card-img-top"
           alt="..."
         />
-        <p class="text-center align-middle mt-1 p-0">Élő radar</p>
+        <p class="text-center align-middle mt-3 p-0">Élő radar</p>
       </a>
     </div>
 
@@ -190,7 +190,7 @@
           class="card-img-top"
           alt="..."
         />
-        <p class="text-center align-middle mt-1 p-0">MET-ÉSZ</p>
+        <p class="text-center align-middle mt-3 p-0">MET-ÉSZ</p>
       </a>
     </div>
 
