--- a/phenology-frontend/src/app/page/guide/individual-plant-guide/individual-plant-guide.component.html
+++ b/phenology-frontend/src/app/page/guide/individual-plant-guide/individual-plant-guide.component.html
@@ -1,15 +1,16 @@
-<div *ngIf="(plant$ | async) as plant" class="col-6 offset-3">
+<div *ngIf="plant$ | async as plant" class="mx-auto m-5">
+  <div>
+    <h3 class="text-center fw-bold mt-5">{{ plant.name }}</h3>
 
-<h4>{{plant.name}}</h4>
+    <h6 class="text-center fw-bold mb-5">{{ plant.latin }}</h6>
 
-<h6>{{ plant.latin }}</h6>
+    <p class="m-5">
+      <img [src]="plant.image[1]" alt="" class="me-5 image-1" />
+      {{ plant.description }}
+    </p>
 
-<img [src]="plant.image[1]" alt="" class="m-3">
+    <img [src]="plant.image[2]" alt="" class="image-2" />
 
-<p>{{ plant.description }}</p>
-
-<img [src]="plant.image[2]" alt="" class="m-3">
-
-<img [src]="plant.image[3]" alt="" class="m-3">
-
+    <img [src]="plant.image[3]" alt="" class="image-3" />
+  </div>
 </div>
